--- a/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <AssemblyName>Khooversoft.Toolbox.Standard</AssemblyName>
+    <RootNamespace>Khooversoft.Toolbox.Standard</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.10.0" />
+  </ItemGroup>
 
 </Project>
