--- a/Src/Test/Toolbox.Core.Extensions.Configuration.Test/Toolbox.Core.Extensions.Configuration.Test.csproj
+++ b/Src/Test/Toolbox.Core.Extensions.Configuration.Test/Toolbox.Core.Extensions.Configuration.Test.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Option\Test.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Option\Test.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
