--- a/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.10.0" />
   </ItemGroup>
 
