--- a/Src/Test/EventHubPerformanceTest/EventHubPerformanceTest.csproj
+++ b/Src/Test/EventHubPerformanceTest/EventHubPerformanceTest.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Core.Extensions.Configuration\Toolbox.Core.Extensions.Configuration.csproj" />
+    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Extensions.Configuration\Toolbox.Extensions.Configuration.csproj" />
+    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
 </Project>
