--- a/Src/Test/Toolbox.Extensions.Configuration.Test/Toolbox.Extensions.Configuration.Test.csproj
+++ b/Src/Test/Toolbox.Extensions.Configuration.Test/Toolbox.Extensions.Configuration.Test.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Core.Extensions.Configuration\Toolbox.Core.Extensions.Configuration.csproj" />
+    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Extensions.Configuration\Toolbox.Extensions.Configuration.csproj" />
     <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
