--- a/Src/Dev/Toolbox.Core/Toolbox.Extensions.Configuration/Toolbox.Extensions.Configuration.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Extensions.Configuration/Toolbox.Extensions.Configuration.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.AzureKeyVault" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
   </ItemGroup>
 
