--- a/Src/Test/Toolbox.Extensions.Configuration.Test/Toolbox.Extensions.Configuration.Test.csproj
+++ b/Src/Test/Toolbox.Extensions.Configuration.Test/Toolbox.Extensions.Configuration.Test.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="3.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
