Added block chain test & MerkleTree for future use with test cases

--- a/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Model\" />
+  </ItemGroup>
+
 </Project>
