--- a/Src/Dev/Toolbox.Core/Toolbox.Autofac/Toolbox.Autofac.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Autofac/Toolbox.Autofac.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RootNamespace>Khooversoft.Toolbox.Autofac</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
