--- a/Src/Dev/Toolbox.Core/Toolbox.Azure/Toolbox.Azure.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Azure/Toolbox.Azure.csproj
@@ -1,9 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>Khooversoft.Toolbox.BLockDocument</RootNamespace>
+    <RootNamespace>Khooversoft.Toolbox.Azure</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.1.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Toolbox.Standard\Toolbox.Standard.csproj" />
