--- a/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>Khooversoft.Toolbox.BLockDocument</RootNamespace>
+    <RootNamespace>Khooversoft.Toolbox.BlockDocument</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Toolbox.Standard\Toolbox.Standard.csproj" />
