Finished block chain structure and serialization

--- a/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
@@ -2,12 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Nullable>enable</Nullable>
     <RootNamespace>Khooversoft.Toolbox.BlockDocument</RootNamespace>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Toolbox.Standard\Toolbox.Standard.csproj" />
