--- a/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.BlockDocument/Toolbox.BlockDocument.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Toolbox.Security\Toolbox.Security.csproj" />
     <ProjectReference Include="..\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
