--- a/Src/Dev/MessageNet/MessageNet.Client/MessageNet.Client.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Client/MessageNet.Client.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
+    <RootNamespace>Khooversoft.MessageNet.Client</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
