--- a/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <RootNamespace>Khooversoft.MessageHub.Interface</RootNamespace>
+    <RootNamespace>Khooversoft.MessageNet.Interface</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Folder Include="Package\" />
   </ItemGroup>
 
 </Project>
