--- a/Src/Test/ToolBox.Azure.Test/ToolBox.Azure.Test.csproj
+++ b/Src/Test/ToolBox.Azure.Test/ToolBox.Azure.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>ToolBox.Azure.Test</UserSecretsId>
-    <Nullable>enabled</Nullable>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
