--- a/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Standard/Toolbox.Standard.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="System.Threading.Tasks.Dataflow" Version="4.11.0" />
   </ItemGroup>
 
