--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,29 +6,78 @@
 trigger:
 - master
 
-pool:
-  vmImage: 'windows-latest'
-
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
 
-steps:
-- task: NuGetToolInstaller@1
+stages:
 
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
+# Build stage =================================================================
 
-- task: VSBuild@1
-  inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:DesktopBuildPackageLocation="$(build.artifactStagingDirectory)\WebApp.zip" /p:DeployIisAppPath="Default Web Site"'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+- stage: Build
+  displayName: Build all solutions
+  
+  jobs:
+  - job: Agent Job 1
+    displayName: Build Tasks
+    pool:
+      vmImage: 'windows-latest'
+      name: Azure Pipelines
+      
+    steps:
+    
+    - task: UseDotNet@2
+      displayName: 'Use .Net Core sdk 3.x'
+      inputs:
+        version: 3.x
 
-- task: VSTest@2
-  inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    - task: DotNetCoreCLI@2
+      displayName: 'Restore Toolbox'
+      inputs:
+        command: restore
+        projects: Src/Dev/Toolbox.Core/Toolbox.Core.sln
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Build Toolbox'
+      inputs:
+        projects: Src/Dev/Toolbox.Core/Toolbox.Core.sln
+        arguments: '--configuration $(BuildConfiguration)'
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Restore MessageNet'
+      inputs:
+        command: restore
+        projects: Src/Dev/MessageNet/MessageNet.sln
+
+    - task: DotNetCoreCLI@2
+      displayName: 'Build MessageNet'
+      inputs:
+        projects: Src/Dev/MessageNet/MessageNet.sln
+        arguments: '--configuration $(BuildConfiguration)'
+
+    - task: DotNetCoreCLI@2
+      displayName: Test
+      inputs:
+        command: test
+        projects: Src/Dev/Toolbox.Core/Toolbox.Core.sln
+        arguments: '--configuration $(BuildConfiguration) --filter Category!=LocalOnly'
+        testRunTitle: 'Toolbox.Core Tests'
+
+    - task: DotNetCoreCLI@2
+      displayName: Publish
+      inputs:
+        command: publish
+        publishWebProjects: True
+        arguments: '--configuration $(BuildConfiguration) --output $(build.artifactstagingdirectory)'
+        zipAfterPublish: True
+      enabled: false
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact'
+      inputs:
+        PathtoPublish: '$(build.artifactstagingdirectory)'
+      enabled: false
+      condition: succeededOrFailed()
+
+
