--- a/Src/Test/Toolbox.Actor.Tests/Toolbox.Actor.Tests.csproj
+++ b/Src/Test/Toolbox.Actor.Tests/Toolbox.Actor.Tests.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Actor\Toolbox.Actor.csproj" />
+    <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
     <ProjectReference Include="..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
