--- a/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
@@ -8,14 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Package\" />
   </ItemGroup>
 
 </Project>
