--- a/Src/Dev/MessageNet/MessageNet.Management/MessageNet.Management.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Management/MessageNet.Management.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Azure.Storage.Blobs" Version="12.2.0" />
     <PackageReference Include="Microsoft.Azure.ServiceBus" Version="4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
