--- a/Src/Test/MessageNet/MessageNet.Management.Test/MessageNet.Management.Test.csproj
+++ b/Src/Test/MessageNet/MessageNet.Management.Test/MessageNet.Management.Test.csproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Management\MessageNet.Management.csproj" />
+    <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
