--- a/Src/Test/MessageNet/ServiceBusPerformanceTest/ServiceBusPerformanceTest.csproj
+++ b/Src/Test/MessageNet/ServiceBusPerformanceTest/ServiceBusPerformanceTest.csproj
@@ -17,6 +17,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Client\MessageNet.Client.csproj" />
     <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Interface\MessageNet.Interface.csproj" />
+    <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Configuration\Toolbox.Configuration.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
