--- a/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Interface/MessageNet.Interface.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Actor\Toolbox.Actor.csproj" />
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
