Refactor to simple model

--- a/Src/Dev/MessageNet/MessageNet.NameServer/MessageNet.NameServer.csproj
+++ b/Src/Dev/MessageNet/MessageNet.NameServer/MessageNet.NameServer.csproj
@@ -24,8 +24,8 @@
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Configuration\Toolbox.Configuration.csproj" />
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
+    <ProjectReference Include="..\MessageNet.Host\MessageNet.Host.csproj" />
     <ProjectReference Include="..\MessageNet.Interface\MessageNet.Interface.csproj" />
-    <ProjectReference Include="..\MessageNet.Management\MessageNet.Management.csproj" />
   </ItemGroup>
 
 </Project>
