--- a/Src/Dev/MessageNet/MessageNet.Host/MessageNet.Host.csproj
+++ b/Src/Dev/MessageNet/MessageNet.Host/MessageNet.Host.csproj
@@ -8,8 +8,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Actor\Toolbox.Actor.csproj" />
+    <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Azure\Toolbox.Azure.csproj" />
     <ProjectReference Include="..\..\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
     <ProjectReference Include="..\MessageNet.Interface\MessageNet.Interface.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Actor\" />
   </ItemGroup>
 
 </Project>
