--- a/Src/Test/MessageNet/MessageNet.Management.Test/MessageNet.Management.Test.csproj
+++ b/Src/Test/MessageNet/MessageNet.Management.Test/MessageNet.Management.Test.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Management\MessageNet.Management.csproj" />
+    <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Host\MessageNet.Host.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
