--- a/Src/Test/MessageNet/MessageNet.Node.Tests/MessageNet.Node.Tests.csproj
+++ b/Src/Test/MessageNet/MessageNet.Node.Tests/MessageNet.Node.Tests.csproj
@@ -26,9 +26,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Host\MessageNet.Host.csproj" />
     <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Interface\MessageNet.Interface.csproj" />
-    <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.Management\MessageNet.Management.csproj" />
-    <ProjectReference Include="..\..\..\Dev\MessageNet\MessageNet.NameServer\MessageNet.NameServer.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Autofac\Toolbox.Autofac.csproj" />
+    <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Azure\Toolbox.Azure.csproj" />
     <ProjectReference Include="..\..\..\Dev\Toolbox.Core\Toolbox.Standard\Toolbox.Standard.csproj" />
   </ItemGroup>
 
