--- a/Src/Dev/Microservice.Core/CustomerInfo.Microservice.Test/CustomerInfo.Microservice.Test.csproj
+++ b/Src/Dev/Microservice.Core/CustomerInfo.Microservice.Test/CustomerInfo.Microservice.Test.csproj
@@ -2,20 +2,29 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
+    <UserSecretsId>CustomerInfo.Microservice.Test</UserSecretsId>
+    <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Application\TestConfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Application\TestConfig.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="5.1.2" />
-    <PackageReference Include="FluentAssertions" Version="5.10.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="1.2.0">
+    <PackageReference Include="coverlet.collector" Version="1.2.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -24,7 +33,6 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\Test\Microservice.Core\CustomerInfo.MicroService\CustomerInfo.MicroService.csproj" />
     <ProjectReference Include="..\..\..\Test\Microservice.Core\Microservice.Interface.Test\Microservice.Interface.Test.csproj" />
-    <ProjectReference Include="..\..\MessageNet\MessageNet.Client\MessageNet.Client.csproj" />
     <ProjectReference Include="..\..\MessageNet\MessageNet.Interface\MessageNet.Interface.csproj" />
     <ProjectReference Include="..\Microservice.Interface\Microservice.Interface.csproj" />
     <ProjectReference Include="..\MicroserviceHost\MicroserviceHost.csproj" />
