Added Message Broker service

--- a/Src/Dev/Toolbox.Core/Toolbox.MessageBroker/Toolbox.MessageBroker.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.MessageBroker/Toolbox.MessageBroker.csproj
@@ -2,12 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <RootNamespace>Khooversoft.Toolbox.Autofac</RootNamespace>
+    <RootNamespace>Khooversoft.Toolbox.MessageBroker</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="5.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
