--- a/Src/Dev/Toolbox.Core/Toolbox.Run/Toolbox.Run.csproj
+++ b/Src/Dev/Toolbox.Core/Toolbox.Run/Toolbox.Run.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <RootNamespace>Khooversoft.Toolbox.Run</RootNamespace>
     <Nullable>enable</Nullable>
   </PropertyGroup>
